# unnamed_weeb_music_database

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
migrations/: 20221226140645_types.down.sql  20221226140645_types.up.sql  20221226201611_tables.down.sql  20221226201611_tables.up.sql  20221226220226_add_artists_description.down.sql  20221226220226_add_artists_description.up.sql  20221226220427_add_artists_alternative_names.down.sql  20221226220427_add_artists_alternative_names.up.sql  20221230151613_add_new_columns.down.sql  20221230151613_add_new_columns.up.sql  20230106161251_add_user_tables.down.sql  20230106161251_add_user_tables.up.sql  20230107184810_add_value_sitetypes.down.sql  20230107184810_add_value_sitetypes.up.sql  20230112155533_add_tags_and_missing_columns.down.sql  20230112155533_add_tags_and_missing_columns.up.sql
src/: constants.rs  main.rs
src/controllers/: graphql.rs  page.rs
src/database/: artist.rs  mod.rs  release.rs  song.rs  tag.rs  user.rs
src/models/: artist.rs  external_links.rs  mod.rs  refresh_token.rs  release.rs  song.rs  tag.rs  user.rs
src/utils/: config.rs  error.rs  middleware.rs  startup.rs
