[package]
name = "unnamed_weeb_music_database"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13.0"
chrono = "0.4.23"
hyper = "0.14.18"
jsonwebtoken = "8.2.0"
serde = "1.0.137"
serde_json = "1.0.81"
ulid = { version = "1.0.0", features = ["std"] }

# Routerify and its shenanigans
routerify = "3.0.0"
routerify-json-response = "3.0.0"
async-graphql = { version = "5.0.4", features = ["chrono"] }

# Toml parsing for configuration.
confy = "0.5.1"

# Async utils
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"

# Logging Instruments
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

# SQLx (postgres) and SeaQuery for dynamic queries
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "offline", "all-types"] }
sea-query = { version = "^0", features = ["derive", "attr", "thread-safe", "sqlx-postgres", "postgres-array", "with-chrono"] }
